--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.0"
   }
 }
