--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
+    "compilex": "^0.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -14,6 +18,8 @@
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "sequelize": "^6.37.0"
+    "readline": "^1.3.0",
+    "sequelize": "^6.37.0",
+    "uuid": "^9.0.1"
   }
 }
